--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "2.8.5",
